# llm-orchestrator

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: npm-publish.yml
crates/llm-orchestrator-audit/src/: lib.rs
crates/llm-orchestrator-auth/: README.md
crates/llm-orchestrator-cli/src/: main.rs
crates/llm-orchestrator-core/src/: context.rs  dag.rs  error.rs  executor.rs  executor_state.rs  health.rs  lib.rs  metrics.rs  providers.rs  retry.rs  workflow.rs
crates/llm-orchestrator-core/tests/: integration_test.rs
crates/llm-orchestrator-secrets/: README.md
crates/llm-orchestrator-state/: README.md
docs/: DR_IMPLEMENTATION_COMPLETE.md  FINAL_PRODUCTION_VALIDATION.md  IMMEDIATE_ACTIONS_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NPM_PUBLISHING_GUIDE.md  OBSERVABILITY_IMPLEMENTATION_REPORT.md  PENTEST_DELIVERABLES.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_4_COMPLETE.md  PRODUCTION_READINESS_CERTIFICATION.md  PUBLISHING_GUIDE.md  STATE_PERSISTENCE_IMPLEMENTATION.md  SWARM_IMPLEMENTATION_SUMMARY.md  VECTOR_DB_IMPLEMENTATION_REPORT.md
docs/api/: API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md
helm/llm-orchestrator/: README.md
npm/llm-orchestrator/: README.md  index.js  package.json
npm/llm-orchestrator-darwin-arm64/: README.md  package.json
npm/llm-orchestrator-darwin-x64/: README.md  package.json
npm/llm-orchestrator-linux-arm64/: README.md  package.json
npm/llm-orchestrator-linux-x64/: README.md  package.json
plans/: Phase-4-Optional-Enhancements-SPARC.md
tests/: disaster_recovery_tests.rs  security_pentest.rs
tests/disaster_recovery/: application_crash.rs  backup_restore.rs  common.rs  data_corruption.rs  database_failure.rs  failover.rs  mod.rs  network_partition.rs
tests/security/: mod.rs
(+33 files in other folders)
